NEXT:

e2factory-2.3.2
 * temporary build directories are located in a version specific directory
   now
 * e2-install-e2 installs branches properly now. Git refs can be specified.
 * a bug in e2-build --force-rebuild was fixed that prevented forced rebuilds
 * the chroot environment is locked now when in use
 * hardlinks are used when preparing the result tarball, if possible, to
   improve performance
 * logfiles are rotated instead of deleting them
 * a bug in configuration validation for files sources was fixed
 * a bug in validating the licences attribute in source configurations was
   fixed
 * the location of a patch that does not apply is included in the error
   message now
 * unused code was removed
 * the faq section in the documentation was extended
 * outdated documentation was removed
 * a bug was fixed that lead to partial results being left on local servers
   or in the cache when copying was interrupted
 * storing results to cache and to servers is optimized by trying to
   create hardlinks if possible. This may fail due to filesystem boundaries.
   In that case the code falls back to copying.
   Hardlinking is not possible if push_permissions is set for the particular
   server.
 * the configuration file format for chroot and licence configuration files
   has changed to prepare for configuring per-file checksums where files
   are referenced
 * sha1 checksums must be configured in the source-, licence- and chroot
   configuration now where files are referenced. Exceptions are allowed
   for files stored in the project configuration tree (on the "." server)
 * fix the bug that the project name configuratino from `proj/config` did
   not influence the BuildId
 * the example project is now included in the main source tree. Additional
   files and the e2factory.git repository can be fetched on-the-fly

e2factory-2.3.1
 * bugfixes

e2factory-2.3.1rc1
 * bugfixes, documentation

e2factory-2.3.1pre1
 * bugfixes